# portal

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  portal.toml
plugins/: portal.ev  portal.plugin.elv  portal.plugin.zsh  portal.zsh
src/: application.rs  commands.rs  config.rs  database.rs  db.rs  dir.rs  lib.rs  main.rs
src/commands/: db.rs  jump.rs  version.rs
test/: portal.rs
tests/: acceptance.rs
